--- a/comments.html
+++ b/comments.html
@@ -13,7 +13,7 @@
   <div id="cusdis_thread"
        data-host="https://cusdis.com"
        data-app-id="e627d6d5-b099-44f3-bab5-d4af5bba04b4"
-       data-page-id="comments-page"
+       data-page-id="https://soojin178.github.io/comments.html"
        data-page-url="https://soojin178.github.io/comments.html"
        data-page-title="My Comments Page">
   </div>
